manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: premkoredla/backend:9e76d945faf25cca12e419040f115467021aaae1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
      - name: jaeger-agent
        image: jaegertracing/jaeger-agent:1.55
        args:
          - "--reporter.grpc.host-port=jaeger.observability.svc.cluster.local:14250"
        ports:
        - containerPort: 6831
          protocol: UDP
